--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,14 +3,27 @@
           package="com.mobilejohnny.bluetoothsppwidget"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="14"/>
+    <uses-sdk android:minSdkVersion="15"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="MyActivity"
+        <activity android:name=".SettingActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+            <receiver android:name=".WidgetProvider" android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"></action>
+            </intent-filter>
+            <meta-data android:resource="@xml/widgetinfo" android:name="android.appwidget.provider"></meta-data>
+        </receiver>
+        <receiver android:name=".Receiver">
+            <intent-filter>
+                <action android:name="com.mobilejohnny.bluetoothsppwidget.action.SWITCH"></action>
+            </intent-filter>
+        </receiver>
+
     </application>
+    <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
 </manifest>
