--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,16 +3,19 @@
           package="com.mobilejohnny.bluetoothsppwidget"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="15"/>
+    <uses-sdk android:minSdkVersion="14"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".SettingActivity"
+        <activity android:name=".ConfigureActivity"
                   android:label="@string/app_name">
+
+        </activity>
+        <activity android:name=".DeviceList">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"></action>
             </intent-filter>
         </activity>
-            <receiver android:name=".WidgetProvider" android:label="@string/app_name">
+
+        <receiver android:name=".WidgetProvider" android:label="@string/widget_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"></action>
             </intent-filter>
