--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,17 +4,17 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="14"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".ConfigureActivity"
-                  android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@drawable/bluetooth_icon">
 
-        </activity>
-        <activity android:name=".DeviceList">
+        <activity android:name=".DeviceListActivity" android:label="@string/BoundedDeviceList">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_CONFIGURE"></action>
             </intent-filter>
         </activity>
+        <activity android:name=".ConfigureActivity" android:theme="@android:style/Theme.DeviceDefault.Dialog"  android:windowSoftInputMode="stateVisible"
+                  android:label="@string/ConfigButton">
 
+        </activity>
         <receiver android:name=".WidgetProvider" android:label="@string/widget_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"></action>
