--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.mobilejohnny.bluetoothsppwidget"
-          android:versionCode="2"
-          android:versionName="1.01">
+          android:versionCode="3"
+          android:versionName="1.02">
     <uses-sdk android:minSdkVersion="14"/>
     <application android:label="@string/app_name" android:icon="@drawable/bluetooth_icon">
 
@@ -20,12 +20,8 @@
             </intent-filter>
             <meta-data android:resource="@xml/widgetinfo" android:name="android.appwidget.provider"></meta-data>
         </receiver>
-        <receiver android:name=".Receiver">
-            <intent-filter>
-                <action android:name="com.mobilejohnny.bluetoothsppwidget.action.SWITCH"></action>
-            </intent-filter>
-        </receiver>
 
+        <service android:name=".WidgetService"/>
     </application>
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
